# keli-core-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  interop.yml  release.yml
docs/: ARCHITECTURE.md  INTEROP_SOAK.md  PARITY.md
docs/interop_runs/: TEMPLATE.md
docs/superpowers/plans/: 2026-05-19-hy2-auth-timeout-parity.md  2026-05-22-xray-dispatcher-policy-parity.md  2026-05-27-go-like-connection-scheduler.md
docs/superpowers/specs/: 2026-05-27-go-like-connection-scheduler-design.md
examples/: interop_matrix.rs
scripts/: mieru_official_soak_linux.sh  naive_official_soak_linux.sh  trojan_ws_sing_box_interop_linux.sh
src/: abuse.rs  allocator.rs  anytls.rs  bench.rs  config.rs  config_io.rs  control.rs  control_server.rs  dispatcher.rs  dns.rs  grpc.rs  http2.rs  http_proxy.rs  httpupgrade.rs  hysteria2.rs  lib.rs  limits.rs  logging.rs  main.rs  metrics.rs  mieru.rs  mkcp.rs  naive.rs  outbound.rs  protocol.rs  quic.rs  quic_packet.rs  quic_resources.rs  quic_tuning.rs  reality.rs  routing.rs  runtime.rs  salamander.rs  service.rs  shadowsocks.rs  socket_bind.rs  socks5.rs  stream.rs  tls.rs  traffic.rs  (+7 more)
tests/: control_socket_smoke.rs
