[package]
name = "keli-core-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MPL-2.0"
description = "Experimental Rust data-plane core for Keli."

[lib]
name = "keli_core_rs"
path = "src/lib.rs"

[[bin]]
name = "keli-core-rs"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
chacha20poly1305 = "0.10"
getrandom = "0.2"
hkdf = "0.12"
md-5 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
