[package]
name = "keli-core-rs"
version = "0.1.150"
edition = "2021"
rust-version = "1.74"
license = "MPL-2.0"
description = "Experimental Rust data-plane core for Keli."

[lib]
name = "keli_core_rs"
path = "src/lib.rs"

[[bin]]
name = "keli-core-rs"
path = "src/main.rs"

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
arc-swap = "1"
base64 = "0.22"
blake2 = "0.10"
bytes = "1"
chacha20poly1305 = "0.10"
crc32fast = "1"
getrandom = "0.2"
hkdf = "0.12"
hmac = "0.12"
h3 = "0.0.8"
h3-quinn = "0.0.10"
h2 = "0.4"
http = "1"
libc = "0.2"
md-5 = "0.10"
quinn = "0.11"
rcgen = "0.13"
regex = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
socket2 = "0.6"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
webpki-roots = "1"
x25519-dalek = { version = "2", features = ["static_secrets"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
